--- a/.eslintrc
+++ b/.eslintrc
@@ -1,56 +1,42 @@
 {
+  "extends": "eslint-config-airbnb",
   "env": {
+    "browser": true,
     "node": true,
     "mocha": true
   },
-  "parserOptions": {
-    "ecmaVersion": 6,
-    "sourceType": "module",
-    "ecmaFeatures": {
-      "jsx": true
-    }
-  },
-  "globals": {
-    "afterEach": true,
-    "beforeEach": true,
-    "console": true,
-    "describe": true,
-    "expect": true,
-    "it": true,
-    "xit": true
+  "ecmaFeatures": {
+    "jsx": true
   },
   "rules": {
-    "block-scoped-var": 2,
-    "brace-style": [2, "1tbs"],
-    "consistent-return": 2,
-    "consistent-this": [0, "self"],
-    "curly": 2,
-    "eol-last": 0,
-    "no-else-return": 2,
-    "no-eq-null": 2,
-    "no-extra-parens": [2, "functions"],
-    "no-floating-decimal": 2,
-    "no-lonely-if": 2,
-    "no-mixed-spaces-and-tabs": [2, true],
-    "no-nested-ternary": 2,
-    "no-path-concat": 2,
-    "no-redeclare": 2,
-    "no-self-compare": 2,
-    "semi-spacing": 2,
-    "no-trailing-spaces": 2,
-    "no-undefined": 0,
+    "strict": 0,
+    "new-cap": 0,
+    "vars-on-top" : 0,
     "no-underscore-dangle": 0,
-    "no-unused-vars": [2, {
-      "args": "none",
-      "vars": "all"
-    }],
-    "no-use-before-define": [2,"nofunc"],
-    "quotes": [1, "single", "avoid-escape"],
-    "radix": 2,
-    "semi": [2, "always"],
-    "sort-vars": 2,
-    "space-unary-ops": 2,
-    "strict": [2, "global"],
-    "wrap-iife": [2, "inside"]
+    "react/no-multi-comp": 0,
+    "import/default": 0,
+    "import/no-duplicates": 0,
+    "import/named": 0,
+    "import/namespace": 0,
+    "import/no-unresolved": 0,
+    "import/no-named-as-default": 2,
+    "comma-dangle": 0,
+    "max-len": [1, {"code": 250, "tabWidth": 2, "ignoreUrls": true}],
+    "indent": [2, 2, {"SwitchCase": 1}],
+    "brace-style": [2, "1tbs", { "allowSingleLine": true }],
+    "no-console": 0,
+    "no-param-reassign": 0,
+    "no-alert": 0,
+    "func-names": 0,
+    "arrow-body-style": 0,
+    "consistent-return": 0,
+    "react/jsx-indent-props": 0,
+    "react/jsx-closing-bracket-location": 0
+  },
+  "settings": {
+    "import/parser": "babel-eslint",
+    "import/resolve": {
+      "moduleDirectory": ["node_modules", "src"]
+    }
   }
 }
