--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "realtime-api",
   "version": "0.0.1",
   "description": "An API that demonstrates the issues and possible solution for concurrency in modern web applications.",
-  "main": "index.js",
+  "main": "src/server.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/splayfee/realtime-api.git"
@@ -26,7 +26,6 @@
   "homepage": "https://github.com/splayfee/realtime-api",
   "author": "David LaTour <david@edium.com>",
   "devDependencies": {
-    "babel-eslint": "^6.1.2",
     "chai": "^3.3.0",
     "del": "^2.0.2",
     "gulp": "^3.9.0",
@@ -37,6 +36,21 @@
     "run-sequence": "^1.1.4"
   },
   "dependencies": {
+    "bcrypt": "^0.8.7",
+    "bluebird": "^3.4.1",
+    "body-parser": "^1.15.2",
+    "chalk": "^1.1.3",
+    "compression": "^1.6.2",
+    "eslint-config-airbnb": "^10.0.0",
+    "eslint-plugin-import": "^1.12.0",
+    "eslint-plugin-jsx-a11y": "^2.0.1",
+    "eslint-plugin-react": "^6.0.0",
+    "express": "^4.14.0",
+    "jsonwebtoken": "^7.1.7",
+    "lodash": "^4.14.1",
+    "morgan": "^1.7.0",
+    "mysql": "^2.11.1",
+    "sequelize": "^3.23.6",
     "socket.io": "^1.4.8"
   }
 }
