--- a/package.json
+++ b/package.json
@@ -26,31 +26,28 @@
   "homepage": "https://github.com/splayfee/realtime-api",
   "author": "David LaTour <david@edium.com>",
   "devDependencies": {
-    "chai": "^3.3.0",
-    "del": "^2.0.2",
+    "del": "^2.2.2",
     "gulp": "^3.9.0",
     "gulp-eslint": "^3.0.1",
-    "gulp-istanbul": "^1.0.0",
+    "gulp-istanbul": "^1.1.1",
     "gulp-jsonlint": "^1.1.0",
-    "gulp-mocha": "^3.0.0",
-    "run-sequence": "^1.1.4"
+    "gulp-mocha": "^3.0.1"
   },
   "dependencies": {
     "bcrypt": "^0.8.7",
-    "bluebird": "^3.4.1",
+    "bluebird": "^3.4.6",
     "body-parser": "^1.15.2",
     "chalk": "^1.1.3",
     "compression": "^1.6.2",
-    "eslint-config-airbnb": "^10.0.0",
-    "eslint-plugin-import": "^1.12.0",
-    "eslint-plugin-jsx-a11y": "^2.0.1",
-    "eslint-plugin-react": "^6.0.0",
+    "eslint-config-airbnb": "^12.0.0",
+    "eslint-plugin-import": "^2.0.1",
+    "eslint-plugin-jsx-a11y": "^2.2.3",
+    "eslint-plugin-react": "^6.4.1",
     "express": "^4.14.0",
-    "jsonwebtoken": "^7.1.7",
-    "lodash": "^4.14.1",
+    "jsonwebtoken": "^7.1.9",
+    "lodash": "^4.16.4",
     "morgan": "^1.7.0",
-    "mysql": "^2.11.1",
-    "sequelize": "^3.23.6",
-    "socket.io": "^1.4.8"
+    "sequelize": "^3.24.6",
+    "socket.io": "^1.5.1"
   }
 }
